Get basic port working to Pasta.js

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <script src="range-slider.js"></script>
+    <script src="pasta.js"></script>
     <title>Elm App</title>
 </head>
 <body>
